Fix small alignment issue in the call

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h2 {
     padding: 4rem 8rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;;
     border-radius: 8px;
 }
 
